the library will be released soon as a jar